checkpoint before dividing into components

--- a/extensions/refund-portal/locales/en.default.json
+++ b/extensions/refund-portal/locales/en.default.json
@@ -4,7 +4,7 @@
   "refundPortalSubtitle": "Request a refund or store credit for your order",
   "refundOptionsHeading": "Choose your refund option",
   "refundInstructions": "Please select the way",
-  "requestRefundButton": "Request Refund",
+  "requestRefundButton": "Back to Card/Account",
   "requestStoreCreditButton": "Request Store Credit",
   "selectItemsHeading": "Select items to return",
   "selectItemsInstructions": "Check the items you'd like to return or exchange.",
