--- a/extensions/refund-portal/locales/en.default.json
+++ b/extensions/refund-portal/locales/en.default.json
@@ -6,7 +6,7 @@
   "refundInstructions": "Please select the way",
   "requestRefundButton": "Request Refund",
   "requestStoreCreditButton": "Request Store Credit",
-  "selectItemsHeading": "Select items to return",
+  "selectItemsHeading": "Select items to return:",
   "selectItemsInstructions": "Check the items you'd like to return or exchange.",
   "continueButton": "Continue with selected items",
   "loadingOrder": "Loading order details...",
