--- a/extensions/refund-portal/locales/en.default.json
+++ b/extensions/refund-portal/locales/en.default.json
@@ -4,8 +4,8 @@
   "refundPortalSubtitle": "Request a refund or store credit for your order",
   "refundOptionsHeading": "Choose your refund option",
   "refundInstructions": "Please select the way",
-  "requestRefundButton": "Request Refund",
-  "requestStoreCreditButton": "Request Store Credit",
+  "requestRefundButton": "Receive a full refund",
+  "requestStoreCreditButton": "Store Credit +5% off",
   "selectItemsHeading": "Select items to return:",
   "selectItemsInstructions": "Check the items you'd like to return or exchange.",
   "continueButton": "Continue with selected items",
